# figures-counter

./: .clang-format  .clang-tidy  CMakeLists.txt  CMakePresets.json  Doxyfile  README.md  README_8md.html  annotated.html  bad__input_8cpp.html  classes.html  classfigures__counter_1_1error_1_1bad__input-members.html  classfigures__counter_1_1error_1_1bad__input.html  classfigures__counter_1_1error_1_1figures__counter__exception-members.html  classfigures__counter_1_1error_1_1figures__counter__exception.html  classfigures__counter_1_1error_1_1row__count__error-members.html  classfigures__counter_1_1error_1_1row__count__error.html  classfigures__counter_1_1error_1_1row__length__error-members.html  classfigures__counter_1_1error_1_1row__length__error.html  classfigures__counter_1_1error_1_1unrecognized__symbol-members.html  classfigures__counter_1_1error_1_1unrecognized__symbol.html  count__figures_8cpp.html  dir_474840006d6842ad8ce723a2480c8220.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_5a6dd24f9173d9a90666290ba41b0ad0.html  dir_e216ff7d989ee34d2c02a656404fe871.html  error_8cpp.html  error_8h.html  error_8h_source.html  figures-counter_2main_8cpp.html  figures-counter_8cpp.html  figures-counter_8h.html  figures-counter_8h_source.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  (+12 more)
.github/workflows/: build.yml  ci.yml  clang-lint.yml  cmake-configure.yml  cmake.yml  code-analysis.yml  doxygen.yml  test.yml
figures-counter/: CMakeLists.txt  main.cpp
figures-counter/impl/: error.cpp  figures-counter.cpp  figures_counter.cpp
figures-counter/impl/includes/: bmp.h  bmp_figures_counter.h  bmp_line_loader.h  disjoint_set.h  line_loader.h  sequential_figures_counter.h
figures-counter/impl/internal/: bmp.cpp  bmp_figures_counter.cpp  bmp_line_loader.cpp  disjoint_set.cpp  line_loader.cpp  sequential_figures_counter.cpp
figures-counter/includes/: error.h  figures-counter.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_7.js  all_8.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_9.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js
tests/: CMakeLists.txt  bad_input.cpp  bmp.cpp  bmp_line_loader.cpp  count_figures.cpp  disjoint_set.cpp  main.cpp
